# edgedb-tokio-ext

./: Cargo.toml  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  publish.yaml  rust.yaml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
ext/: Cargo.toml
ext-derive/: Cargo.toml
ext-derive/src/: lib.rs  shape.rs  tx_variant.rs
ext/src/: lib.rs  project_ext.rs  serde_ext.rs
ext/tests/: test_derive.rs  test_serde.rs
